# smartShip

./: README.md
camera_test/: CMakeLists.txt  package.xml
control_gps/: CMakeLists.txt  package.xml
control_gps/src/: gps_controller.cpp  gps_controller_shit.cpp  gps_publisher.cpp  planner.cpp
control_pkg/: CMakeLists.txt  package.xml
control_pkg/launch/: gps_online.launch  indoor.launch  motor_controller.launch  power_param.launch  robot_base.launch  robot_base2.launch  robot_base_offline.launch  robot_base_online.launch  rosserial.launch  temp.launch  test_order.launch  wall_detect_test.launch  wall_flowing.launch  wall_follow_test.launch
control_pkg/msg/: Motor.msg  order.msg
control_pkg/src/: drive_algo.cpp  drive_algo3.cpp  motor_controller.cpp  stepper.cpp  stepper1.cpp  stepper2.cpp  stepper3.cpp  test_order_pub.cpp  test_publisher.cpp
detect_degree/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
detect_degree/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
detect_degree/src/: detect_cir.cpp  detect_rec.cpp  detect_tri.cpp
detect_degree/trash/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
motor_control/: CMakeLists.txt  package.xml
motor_control/src/: motor_control.cpp
obstacle_avoiding/: CMakeLists.txt  package.xml
obstacle_avoiding/launch/: Obstacle_avoiding.launch  Obstacle_avoiding_only_param.launch
obstacle_avoiding/src/: hoping_planner.cpp  listener.cpp  planner.cpp  planner2 copy 2.cpp  planner2 copy.cpp  planner2.cpp  planner2_hopping.cpp  planner2_jocata.cpp  planner_simple.cpp
obstacle_detector/include/: figure_fitting.h
obstacle_detector/launch/: single_scanner copy.launch  single_scanner.launch
obstacle_detector/resources/: obstacle_detector.rviz
obstacle_detector/src/: obstacle_detector (copy).cpp  obstacle_detector.cpp  obstacle_visualizer.cpp
